syntax = "proto3";

package yrcs.nicehouse.api.acl.v1;

option go_package = "github.com/yrcs/nicehouse/api/acl/v1;v1";
option java_multiple_files = true;
option java_package = "com.yrcs.nicehouse.api.acl.v1";
option java_outer_classname = "ACLProto";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "validate/validate.proto";
import "common/common.proto";

service ACL {
  rpc ListRoles(common.PagingRequest) returns (common.PagingResponse);
  rpc GetRole(GetRoleRequest) returns (Role);
  rpc CreateRole(CreateRoleRequest) returns (common.CommonCreate);
  rpc UpdateRole(UpdateRoleRequest) returns (common.CommonUpdate);
  rpc DeleteRoles(common.CommonDeletesRequest) returns (google.protobuf.Empty);
}

message Role {
  string id = 1;
  google.protobuf.Timestamp createdAt = 2;
  google.protobuf.Timestamp updatedAt = 3;
  string name = 4;
  string description = 5;
  bool isSystem = 6;
}

message GetRoleRequest {
  string id = 1 [(validate.rules).string.len = 26];
}

message CreateRoleRequest {
  string name = 1 [(validate.rules).string = {min_len: 2, max_len: 200}];
  optional string description = 2 [(validate.rules).string = {max_len: 200}];
}

message UpdateRoleRequest {
  string id = 1 [(validate.rules).string.len = 26];
  optional string name = 2 [(validate.rules).string = {min_len: 2, max_len: 200}];
  optional string description = 3 [(validate.rules).string = {max_len: 200}];
}